# sudoku-c

./: CMakeLists.txt  README.md
src/: draw.c  draw.h  grid.c  grid.h  input.c  input.h  main.c
